# newsbeat

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  TASKS.md  compose.yaml  improvement-plan.md  profile.md  project.yml  pyproject.toml  sources.yaml
app/: README.md
app/Newsbeat/: project.yml
app/Newsbeat/src/iOS/: PlatformActions.swift
app/Newsbeat/src/macOS/: MacHostCoordinator.swift  MacHostViews.swift  PlatformActions.swift
app/Newsbeat/src/shared/: DigestService.swift  DigestStore.swift  FeedModels.swift  FeedPreferences.swift  KeychainStore.swift  (+4 more)
deploy/: README.md  nginx.conf
deploy/systemd/: newsbeat-digest.service  newsbeat-digest.timer
newsbeat_digest/: README.md  __init__.py  __main__.py  collect.py  config.py  db.py  logging_utils.py  models.py
newsbeat_digest/pipeline/: __init__.py  article.py  brief.py  dedupe.py  normalize.py  phase3.py  score.py  select.py
newsbeat_digest/publish/: __init__.py  archive.py  feed_json.py  feed_rss.py  publisher.py
newsbeat_digest/sources/: __init__.py  arxiv.py  base.py  hn.py  reddit.py  rss.py
src/macOS/: MacHostCoordinator.swift
src/shared/: FeedModels.swift  FeedPreferences.swift  GeneratedPostStore.swift  NewsbeatApp.swift
tests/: test_brief.py  test_cli.py  test_collect.py  test_config.py  test_container_deployment.py  test_db.py  test_dedupe.py  test_feed_json.py  test_phase3.py  test_pipeline.py  test_rss.py  test_score.py  test_selection.py  test_sources.py  test_url_normalize.py
tests/macOS/: PostGenerationTests.swift
(+1 files in other folders)
